fix article-nav left-right spacing

--- a/components/content/content.scss
+++ b/components/content/content.scss
@@ -31,3 +31,8 @@ $section-sm-padding-y: 2 * $spacer;
     margin-bottom: -$article-padding-y;
   }
 }
+
+.article-nav {
+  margin-left: -$nav-link-padding-x;
+  margin-right: -$nav-link-padding-x;
+}
